# sc-machine

./: 404.html  CMakeLists.txt  index.html
changelog/: index.html
connectors-module/: CMakeLists.txt  ConnectorsModule.cpp  ConnectorsModule.hpp
connectors-module/agent/: GenerateConnectorsAgent.cpp  GenerateConnectorsAgent.hpp
dev/codestyle/: index.html
dev/devcontainer/: index.html
docker/: index.html
docs/: changelog.md
license/: index.html
sc-kpm/kpm/: index.html
sc-kpm/sc-search/: search.c  search_keynodes.c  search_keynodes.h
sc-kpm/sc-search/agents/: search_commands.c  search_tooltip.c
sc-memory/api/cpp/agents/: index.html
sc-memory/api/cpp/core/api/: index.html
sc-memory/sc-core/: sc_memory_context_manager.c
sc-memory/sc-core/include/sc-core/: sc_types.h
sc-memory/sc-core/sc-store/: sc_types.h
sc-memory/sc-core/src/sc-store/: sc_storage.c
sc-memory/sc-memory/: sc_template_build.cpp  sc_utils.cpp
sc-tools/cpp_meta/: index.html
sc-tools/kb_repo_file/: index.html
sc-tools/sc-builder/: CMakeLists.txt
sc-tools/sc-builder/src/: builder.cpp  gwf_translator.cpp  gwf_translator.hpp  sc_builder_setup.hpp  sc_repo_path_collector.cpp  scs_loader.cpp  scs_translator.cpp  translator.cpp
sc-tools/sc-builder/tests/: tests.cmake
sc-tools/sc-builder/tests/units/: builder_test.hpp  test_config.cpp  test_gwf_translator.cpp
sc-tools/sc_builder/: index.html
sc-tools/sc_machine/: index.html
sc-tools/sc_server/: index.html
scs/sc_element_types/: index.html
scs/scs/: index.html
search/: search_index.json
(+2 files in other folders)
